XMLExper/m12/m12_100_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLDocument::Accept(tinyxml2::XMLVisitor*) const’:
tinyxml2.cpp:799:99: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLText*’ (conversion casts away constness)
  799 |         for ( const XMLNode* node=FirstChild(); node; /*PCI*/dynamic_cast<tinyxml2::XMLText*>(node)=node->NextSibling() ) {
      |                                                                                                   ^
diff: tinyxml2.S: No such file or directory
